Bug 249620 - Application crashes when folder is touched for too long
Summary: Application crashes when folder is touched for too long
Status: CLOSED FIXED
Alias: None
Product: KAddressbook Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: HI major
Target Milestone: ---
Assignee: Till Adam
URL:
Keywords:
: 252756 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-31 13:42 UTC by Felix Wolfsteller
Modified: 2010-10-13 16:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-08-31 13:42:26 UTC
Touching a folder in the folder view on the left for too long (a second) crashes the application.

Observed in 4:4.5~20100827.1168757-1maemo1.1169941 .

Console shows:

"
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = kaddressbook-mobile path = /opt/maemo/usr/bin pid = 1931
KCrash: Attempting to start  from kdeinit
sock_file=/home/user/.kde/socket-Nokia-N900/kdeinit4__0
Warning: connect() failed: : No such file or directory
KCrash: Attempting to start  directly
KCrash failed to exec(), errno = 2
"
Comment 1 Felix Wolfsteller 2010-09-02 11:06:05 UTC
It actually crashes indepent of where touched too long, also in 4:4.5~20100902.1170752-1maemo1.1170522 .
Comment 2 Volker Krause 2010-09-07 10:53:07 UTC
Could you please provide a backtrace? E.g. by running the application in gdb after installing the debug packages.
Comment 3 Till Adam 2010-09-15 19:21:37 UTC
SVN commit 1175721 by tilladam:

Don't crash on context menu events.

We do want to pass them to webkit, so let's handle it in webview
for now, until we have an action collection there to
actually handle URL clicks and such.

BUG: 249620
BUG: 249905

 M  +1 -0      mailwebview_webkit.cpp  
 M  +3 -0      viewer_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1175721
Comment 4 Felix Wolfsteller 2010-09-17 17:51:20 UTC
Still happens in 4:4.5~20100917.1176264-1maemo1.1174921 .
Comment 5 Till Adam 2010-09-18 20:22:06 UTC
I can't reproduce this at all anymore, with 20100917.1176429-1maemo1.1174921. Please provide more concrete steps to reproduce this with this or a later version.
Comment 6 Felix Wolfsteller 2010-09-20 10:29:50 UTC
With 4:4.5~20100920.1177273-1maemo1.1174921 :

1) open "KDE Contacts"
2) hold your finger on "Personal Contacts" for a short while (< 3 sec).

In this setting, my configuration involved "Personal Contacts" only.
Comment 7 Bjoern Ricks 2010-09-20 18:03:12 UTC
Can confirm that this bug still occurs in kaddressbook-mobile. I'll try to get some debug output tomorrow.
Comment 8 Bjoern Ricks 2010-09-27 16:07:19 UTC
Seems to be fixed in 4:4.5~20100917.1177596-1maemo3.1174921
Comment 9 Felix Wolfsteller 2010-10-01 13:29:20 UTC
Does still happen with 4:4.5~20101001.1181430-1maemo1.1181463 (had "opened" one folder).
Comment 10 Volker Krause 2010-10-01 14:08:51 UTC
Please provide a backtrace then.
Comment 11 Volker Krause 2010-10-04 09:47:51 UTC
*** Bug 252756 has been marked as a duplicate of this bug. ***
Comment 12 Felix Wolfsteller 2010-10-04 10:21:23 UTC
With version 4:4.5~20101001.1181430-1maemo1.1181463.

Program received signal SIGSEGV, Segmentation fault.
0x414ca6c8 in QWidget::actions() const () from /opt/qt4-maemo5/lib/libQtGui.so.4
0x414ca6c8 <_ZNK7QWidget7actionsEv+0>:	ldr	r2, [r1, #4]
(gdb) bt
#0  0x414ca6c8 in QWidget::actions() const () from /opt/qt4-maemo5/lib/libQtGui.so.4
#1  0x40932630 in ?? () from /usr/lib/libakonadi-contact.so.4
#2  0x40932630 in ?? () from /usr/lib/libakonadi-contact.so.4
Backtrace stopped: previous frame identical to this frame (corrupt stack?)
Comment 13 Volker Krause 2010-10-04 12:09:37 UTC
SVN commit 1182355 by vkrause:

don't crash if there is no context menu

CCBUG: 249620


 M  +2 -0      textbrowser_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1182355
Comment 14 Volker Krause 2010-10-05 10:14:57 UTC
I think we got all of them now, if not please reopen and provide a backtrace.
Comment 15 Felix Wolfsteller 2010-10-13 16:19:48 UTC
Confirmed, version 4:4.5~20101013.1185418-1maemo1.1185177.