Don't crash on context menu events.

We do want to pass them to webkit, so let's handle it in webview
for now, until we have an action collection there to
actually handle URL clicks and such.

BUG: 249620
BUG: 249905

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1175721