messageviewer/viewer_p.cpp
@@ -1775,6 +1775,9 @@ void ViewerPrivate::slotUrlPopup(const QString &aUrl, const QPoint& aPos)
   if ( URLHandlerManager::instance()->handleContextMenuRequest( url, aPos, this ) )
     return;
 
+  if ( !mActionCollection )
+    return;
+
   if ( url.protocol() == "mailto" ) {
     mCopyURLAction->setText( i18n( "Copy Email Address" ) );
   } else {
